assets/css/app-dark.css
body.dark-mode {
  background-color: var(--black-light);
  color: var(--white);

  a {
    color: var(--white);
  }

  code {
    background-color: var(--gray-dark);
  }

  header,
  button {
    color: var(--white);
  }

  button {
    &.help {
      background-color: var(--black);
      border: 1px solid var(--white);
    }
  }

  section#game {
    background-color: var(--black);

    #mode-container {
      #daily-details {
        color: var(--white);
      }

      .setting-row {
        a {
          color: var(--white);
        }
      }
    }

    #cards-container,
    #cards-container #user-cards {
      background-color: var(--gray-dark);
    }

    #cards-container {
      .card {
        box-shadow: 2px 2px 1px var(--gray-light2);
      }

      #tableau,
      #base {
        .card {
          background-color: var(--black);
          border: 1px solid var(--off-white);

          &[data-suit="0"] {
            color: var(--card-suit-club2);
          }

          &[data-suit="1"] {
            color: var(--card-suit-diamond2);
          }

          &[data-suit="2"] {
            color: var(--card-suit-heart2);
          }

          &[data-suit="3"] {
            color: var(--card-suit-spade2);
          }
        }
      }
    }

    #keyboard-container {
      button {
        background-color: var(--black);
        border: 1px solid var(--white);
        color: var(--white);
      }

      .row {
        &:last-of-type {
          button {
            background-color: var(--black-light);
            border: 1px solid var(--gray);
            color: var(--white);

            &:disabled {
              background-color: var(--gray-dark);
              border: 1px solid var(--gray-medium);
              color: var(--gray-medium);
            }
          }
          @media (hover: hover) {
            button {
              &:hover {
                background-color: var(--gray-dark);
                border: 1px solid var(--black);
                color: var(--white);
              }
            }
          }
        }

        &.sub {
          button {
            &:hover:not([disabled]) {
              background-color: var(--gray-dark2);
              border: none;
              color: var(--white);
            }
          }
        }
      }
    }
  }

  header {
    background-color: var(--black);

    .menu-left {
      #button-nav {
        img {
          filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(262deg)
            brightness(104%) contrast(96%);
        }
      }

      #nav-overlay {
        #nav-content {
          background-color: var(--black);

          a {
            color: var(--white);
          }

          .container {
            .nav-list {
              a {
                &:hover {
                  background-color: var(--base-color);
                }
              }
            }
          }
        }
      }
    }
  }

  #settings {
    .setting-row {
      .text {
        .description {
          color: var(--gray);
        }
      }
    }
  }

  .switch {
    background-color: var(--gray-dark);

    &[data-status="true"] {
      background-color: var(--base-color);
    }
  }

  .modal-window {
    background-color: var(--black);
  }
  .modal-dialog {
    &.temp {
      .modal-window {
        background-color: var(--black);
        border-color: var(--white);
        color: var(--white);
      }
    }
  }
  .modal-text {
    background-color: var(--black);
    color: var(--white);
  }
  .modal-button-group {
    background-color: var(--black);
  }
}

